--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
+<ng-progress [showSpinner] = "false"></ng-progress>
  <div class="container-fluid">
-  <ng2-slim-loading-bar></ng2-slim-loading-bar>
   <div class="row">
     <div class="col-md-4 nopadding" style="height: 100vh;">
       <h1>Angular Places</h1>
